updated using Colaboratory

--- a/IITB_Baseline_and_Active_Learning_EN_HI_11Sep.ipynb
+++ b/IITB_Baseline_and_Active_Learning_EN_HI_11Sep.ipynb
@@ -4161,7 +4161,7 @@
       },
       "outputs": [],
       "source": [
-        "!python main.py translate {data_dir}/margin_config.yaml --ckpt {model_dir}/enhi_transformer_t1_margin/"
+        "!python main.py translate {data_dir}/least_confidence_interactive.yaml --ckpt {model_dir}/enhi_transformer_t1_least_confidence/273000.ckpt"
       ]
     },
     {
